@@ -77,6 +77,7 @@ Thumbs.db
 \bvar/logs
 
 # Avoid archives of this distribution
+\bapp-doh_*.deb
 \bApp-Doh-v?[\d\.\_]+
 \bdocs/Projects
 \blocal/
