@@ -40,63 +40,60 @@ Unexpected             = v0.38.0
 YAML::Tiny             = 1.64
 
 [Prereqs / ConfigureRequires]
-version             = 0.88
-Module::Build       = 0.4004
-Pod::Perldoc        = 3.23
+version          = 0.88
+Module::Build    = 0.4004
+Pod::Perldoc     = 3.23
 
 [Prereqs / BuildRequires]
-version             = 0.88
-Module::Build       = 0.4004
-Test::Requires      = 0.06
-Test::Warnings      = 0.014
+version          = 0.88
+Module::Build    = 0.4004
+Test::Requires   = 0.06
+Test::Warnings   = 0.014
 
 [Prereqs / Recommends]
-CSS::LESS           = 0.0.3
+CSS::LESS        = 0.0.3
 
 [Meta::Dynamic::Config]
 
 [MetaNoIndex]
-directory           = examples
-directory           = inc
-directory           = share
-directory           = t
+directory        = examples
+directory        = inc
+directory        = share
+directory        = t
 
 [MetaProvides::Package]
-inherit_version     = 0
-meta_noindex        = 1
+inherit_version  = 0
+meta_noindex     = 1
 
 [MetaResources]
-license             = http://dev.perl.org/licenses/
-homepage            = https://metacpan.org/author/PJFL
-bugtracker.web      = https://github.com/pjfl/p5-app-doh/issues
-repository.url      = git://github.com/pjfl/p5-app-doh.git
-repository.web      = http://github.com/pjfl/p5-app-doh
-repository.type     = git
+license          = http://dev.perl.org/licenses/
+homepage         = https://metacpan.org/author/PJFL
+bugtracker.web   = https://github.com/pjfl/p5-app-doh/issues
+repository.url   = git://github.com/pjfl/p5-app-doh.git
+repository.web   = http://github.com/pjfl/p5-app-doh
+repository.type  = git
 
 [Run::BeforeBuild]
-run                 = cp .build.PL Build.PL
-run                 = cp var/root/docs/en/00_Getting_Started.md README.md
+run              = cp .build.PL Build.PL
+run              = cp var/root/docs/en/00_Getting_Started.md README.md
 
 [CopyFilesFromBuild]
-copy                = Build.PL
-copy                = META.json
-move                = cpanfile
+copy             = Build.PL
+copy             = META.json
+move             = cpanfile
 
 [Run::AfterBuild]
-run                 = mv META.json var/etc
+run              = mv META.json var/etc
 
 [GatherDir]
-exclude_filename    = cpanfile
+exclude_filename = cpanfile
 
-[Dpkg::FHSDaemonControl]
-install_cmd         = doh-cli install
-package_section     = perl
-uninstall_cmd       = doh-cli uninstall
+;[Dpkg::FHS]
+;install_cmd      = doh-cli install
+;uninstall_cmd    = doh-cli uninstall
 
-[ChangelogFromGit::Debian]
-file_name           = debian/changelog
-maintainer_email    = [% author_email %]
-maintainer_name     = [% author %]
+;[ChangelogFromGit::Debian]
+;file_name        = debian/changelog
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
